--- a/test.ipynb
+++ b/test.ipynb
@@ -2,61 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "58ce84d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install langchain_experimental -q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7dd1a662",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: mysql-connector-python in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (9.3.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install mysql-connector-python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "20eae20c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Connected to Cloud SQL successfully!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mysql.connector\n",
     "from dotenv import load_dotenv\n",
@@ -65,42 +14,31 @@
     "load_dotenv()\n",
     "\n",
     "connection = mysql.connector.connect(\n",
-    "    host=os.getenv(\"host\"),\n",
-    "    user=os.getenv(\"user\"),\n",
-    "    password=os.getenv(\"password\"),\n",
-    "    port=os.getenv(\"port\"),\n",
-    "    database=os.getenv(\"database\")\n",
+    "    host=os.getenv(\"DB_HOST\"),\n",
+    "    user=os.getenv(\"DB_USER\"),\n",
+    "    password=os.getenv(\"DB_PASS\"),\n",
+    "    port=os.getenv(\"DB_PORT\"),\n",
+    "    database=os.getenv(\"DB_NAME\")\n",
     ")\n",
-    "\n",
-    "print(\"✅ Connected to Cloud SQL successfully!\")\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cc8df191",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Connected successfully!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.sql_database import SQLDatabase\n",
     "\n",
     "db_uri = \"mysql+mysqlconnector://root:Shubham%402024@104.154.236.11:3306/weeding_invitation\"\n",
-    "db = SQLDatabase.from_uri(db_uri)\n",
-    "\n",
-    "print(\"✅ Connected successfully!\")\n"
+    "db = SQLDatabase.from_uri(db_uri)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "4073a7cd",
    "metadata": {},
    "outputs": [
@@ -111,12 +49,12 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new SQLDatabaseChain chain...\u001b[0m\n",
-      "Give the name of the guest who are coming with children?\n",
-      "SQLQuery:\u001b[32;1m\u001b[1;3mSELECT `name` FROM `guests` WHERE `has_children` = 1 LIMIT 5\u001b[0m\n",
-      "SQLResult: \u001b[33;1m\u001b[1;3m[('Alice Smith',), ('Shafiq',)]\u001b[0m\n",
-      "Answer:\u001b[32;1m\u001b[1;3mAlice Smith\u001b[0m\n",
+      "Who are the guests that have halal food?\n",
+      "SQLQuery:\u001b[32;1m\u001b[1;3mSELECT `name`, `family_name` FROM `guests` WHERE `dietary_requirements` LIKE '%halal%' LIMIT 5\u001b[0m\n",
+      "SQLResult: \u001b[33;1m\u001b[1;3m[('Shubham', 'Tanvi Gaikwad'), ('hammy', 'Shubham Singh')]\u001b[0m\n",
+      "Answer:\u001b[32;1m\u001b[1;3mShubham Tanvi Gaikwad and Shubham Singh are the guests that have halal food.\u001b[0m\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Alice Smith\n"
+      "Shubham Tanvi Gaikwad and Shubham Singh are the guests that have halal food.\n"
      ]
     }
    ],
@@ -142,7 +80,7 @@
     "db_chain = SQLDatabaseChain.from_llm(llm, db, verbose=True)\n",
     "\n",
     "# Run a query via LangChain\n",
-    "response = db_chain.run(\"Give the name of the guest who are coming with children?\")\n",
+    "response = db_chain.run(\"Who are the guests that have halal food?\")\n",
     "\n",
     "print(response)\n"
    ]
